# MiniLang-Compiler

./: AST.xml  CMakeLists.txt  README.md  Transition Table.csv  sampleProgram.ml  toDo.txt
src/: ASTAssignmentStmtNode.cpp  ASTBinaryExprNode.cpp  ASTBlockStmtNode.cpp  ASTBooleanLiteralExprNode.cpp  ASTFormalParamStmtNode.cpp  ASTFuncDeclStmtNode.cpp  ASTFunctionCallExprNode.cpp  ASTIdentifierExprNode.cpp  ASTIfStmtNode.cpp  ASTIntegerLiteralExprNode.cpp  ASTNode.cpp  ASTNumberExprNode.cpp  ASTPrintStmtNode.cpp  ASTRealLiteralExprNode.cpp  ASTReturnStmtNode.cpp  ASTStringLiteralExprNode.cpp  ASTSubExpressionExprNode.cpp  ASTUnaryExprNode.cpp  ASTVariableDeclStmtNode.cpp  ASTWhileStmtNode.cpp  FileNotFound.cpp  Lexer.cpp  LexerException.cpp  Parser.cpp  ParserException.cpp  Scope.cpp  Token.cpp  VariableDetails.cpp  VisitorException.cpp  XMLVisitor.cpp  main.cpp
src/ASTNodes/: ASTNode.cpp  ASTNode.h
src/DataStructures/: Evaluation.cpp  Evaluation.h  InterpreterScope.cpp  InterpreterScope.h  Scope.cpp  Scope.h  Token.cpp  Token.h  VariableDetails.cpp  VariableDetails.h
src/Exceptions/: InterpreterException.cpp  InterpreterException.h  LexerException.cpp  ParserException.cpp  SemanticAnalyserException.cpp  SemanticAnalyserException.h  VisitorException.cpp  VisitorException.h
src/Interpreter/: Interpreter.cpp  Interpreter.h
src/Lexer/: Lexer.cpp  Lexer.h
src/MIniLangI/: MiniLangI.cpp  MiniLangI.h
src/Parser/: Parser.cpp  Parser.h
src/SemanticAnalyser/: SemanticAnalyser.cpp  SemanticAnalyser.h
src/Visitors/: Visitor.h  XMLVisitor.cpp  XMLVisitor.h
(+70 files in other folders)
